# FFmpegAndroid

./: README.md  settings.gradle
app/src/main/cpp/: CMakeLists.txt
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/dongao/demo/: MainActivity.java
engine/demux/: NextExtractor.cpp
engine/player/common/: NextPacket.cpp  NextPlayerDefine.h
engine/render/: VideoRenderFactory.h
engine/render/android/: AudioTrackRender.cpp
lib_ffmpeg/: build.gradle
lib_ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_cmd.c  ffmpeg_jni_define.h
lib_ffmpeg/src/main/java/com/dongao/lib/ffmpeg/: EncryptedTsUtil.java  FFmpegCmd.java  FFmpegUtil.java  OnHandleListener.java  ThreadPoolUtil.java
lib_ts_watermark/: build.gradle
lib_ts_watermark/native/: ts_watermark_native.c
lib_ts_watermark/src/main/cpp/: CMakeLists.txt  ffmpeg_runner.c
lib_ts_watermark/src/main/java/com/dongao/lib/tswatermark/: Aes128SegmentCrypto.java  EncryptedTsWatermarker.java  FfmpegCommandBuilder.java  NativeFfmpegRunner.java  SegmentMediaInfo.java  SegmentMediaInfoReader.java  TargetBitrateCalculator.java  WatermarkEncodingProfile.java
lib_ts_watermark/src/test/java/com/dongao/lib/tswatermark/: Aes128SegmentCryptoTest.java  FfmpegCommandBuilderTest.java  TargetBitrateCalculatorTest.java
tools/: build_single_so_ts_watermark.sh
